[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/theme/airbroomball_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/game/arcade/game_over/ArcadeGameOver.gd" type="Script" id=3]
[ext_resource path="res://assets/broomballcoin.png" type="Texture" id=4]
[ext_resource path="res://assets/font/Carlito-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/leaderboardsComplex.png" type="Texture" id=6]
[ext_resource path="res://assets/sounds/commentator/new_highscore.ogg" type="AudioStream" id=7]
[ext_resource path="res://src/Confetti.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 102
outline_size = 3
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="GameOver" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewHighscore" parent="." instance=ExtResource( 8 )]
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 60.0
margin_top = 250.0
margin_right = 660.0
margin_bottom = 378.0
rect_pivot_offset = Vector2( 300, 64 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 232.0
margin_bottom = 128.0
texture = ExtResource( 4 )

[node name="Coins" type="Label" parent="HBoxContainer"]
margin_left = 236.0
margin_top = 12.0
margin_right = 496.0
margin_bottom = 115.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "20000"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 10.0
margin_top = 40.0
margin_right = 710.0
margin_bottom = 1240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = 162.0
margin_top = 499.0
margin_right = 538.0
margin_bottom = 701.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
margin_right = 376.0
margin_bottom = 202.0
custom_constants/separation = 12

[node name="Highscore" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
visible = false
margin_right = 376.0
margin_bottom = 115.0
text = "ONLINE"
icon = ExtResource( 6 )

[node name="Replay" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_right = 376.0
margin_bottom = 95.0
text = "REPLAY"

[node name="Continue" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 376.0
margin_bottom = 202.0
text = "CONTINUE"

[node name="Highscore" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 2 )
anims/FadeOut = SubResource( 3 )

[connection signal="visibility_changed" from="." to="." method="_on_GameOver_visibility_changed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Highscore" to="." method="_on_Highscore_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
